--- a/style.css
+++ b/style.css
@@ -98,6 +98,13 @@ header {
     row-gap: 1rem;
 }
 
+.typing {
+    font-size: 5rem;
+    color: var(--bg);
+    border-right: 2px solid #00ff99;
+    white-space: nowrap;/**/
+    overflow: hidden;/**/
+}
 .box-content h3 {
     color: var(--bg);
     font-size: 5rem;
@@ -123,7 +130,7 @@ header {
 
 /* 2ª sessao */
 
-#home_2 {
+.container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap: 0.5rem;
@@ -154,7 +161,7 @@ h2 {
     color: var(--font1);
 }
 
-.seta{
+.seta {
     
     margin-top: 9rem;
     text-align: center;
