--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ h2 {
 }
 
 .swiper {
-  width: 20%;
+  width: 90%;
   max-width: 900px;
   height: 300px;
   margin: 0 auto;
@@ -328,24 +328,73 @@ footer .container {
 
 /* responsividade */
 
+
 @media (max-width: 768px) {
-  .menu-toggle {
-    display: block;
-  }
 
-  nav {
-    display: none;
-    width: 100%;
-  }
+    #home {
+        grid-template-columns: 1fr;
+    }
 
-  nav.active {
-    display: block;
-  }
+    .box-content .cxInput {
+        width: 90%;  
+    }
 
-  .list-menu ul {
-    flex-direction: column;
-    align-items: center;
-    gap: 1.5rem;
-    padding: 2rem 0;
-  }
+    .typing {
+        width: 100%;
+        text-align: center;
+    }
+
+    .swiper {
+        width: 100%;
+        height: 200px;
+    }
+
+    .card {
+       flex-direction: column;
+       gap: 2rem;
+       padding: 2rem;
+       align-items: center; 
+    }
+
+    .seta {
+        margin-top: 2rem;
+    }
+
+    footer  .container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .content-1 {
+        margin-bottom: 2rem;
+    }
+
+     .menu-toggle {
+        display: block;
+    }
+
+     nav {
+        display: none;
+        width: 100%;
+    }
+
+    nav.active {
+        display: block;
+    }
+
+    .list-menu ul {
+        flex-direction: column;
+        align-items: center;
+        gap: 1.5rem;
+        padding: 2rem 0;
+    }
+}
+
+@media (max-width: 480px) {
+
+    html {
+        font-size: 55%;
+    }
+    
 }
