--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ header {
     flex-direction: column;
     align-items: center;
     padding: 3rem;
+    
     row-gap: 1rem;
 }
 
@@ -149,15 +150,18 @@ header {
     margin-top: 10rem;
     font-size: 3rem;
     color: var(--main-color);
-    border-right: 2px solid #00ff99;
+    /* border-right: 2px solid #00ff99; */
     white-space: nowrap;/**/
     overflow: hidden;/**/
+    
 }
 
 .typing {
     width: 30rem;
     height: 10rem;
+    padding: -2rem;
 }
+
 
 .btn {
     padding: 1.5rem;
@@ -397,7 +401,7 @@ footer .container {
     }
 
     #typed {
-        
+        /* border-right: 2px solid #00ff99; */
         font-size: 1.7rem;
     }
 
