--- a/GBF/diversao.css
+++ b/GBF/diversao.css
@@ -94,32 +94,27 @@ header {
     padding: 20%;
     display: flex;
     justify-content: center;
+    
+
 }
 
 .diversao02 {
     display: grid;
-    /* Organiza */
-    grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
-    gap: 1.5rem;
+    gap: 20rem;
     display: flex;
     justify-content: center;
     align-items: center;
     background: var(--bg);
+    padding: 2em 0 ;
 }
-
+.box-01 h2, p {
+    font-size: 2rem;
+}
 .img {
-    width: 55rem;
-    height: 44rem;
+    width: 32rem;
+    height: 30rem;
 }
 
-.diversao03 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    
-    
-}
 
 .diversao03 h2 {
     display: flex;
@@ -127,9 +122,109 @@ header {
     align-items: center;
 }
 
+.caixa{
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+   
+}
+.titulo {
+    text-align: center;
+}
+
 .box{
     display: grid;
     /* Organiza */
     grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
+}
+
+.box-02{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-03{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* CONFIGURAÇÃO SESSAO RODAPÉ */
+
+.title-footer{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 2rem;
+    color: var(--main-color);
+    margin-bottom: 1.5rem;
+}
+
+.title-footer span {
+    color: var(--main-color);
+    text-transform: uppercase;
+}
+
+footer {
+    background: var(--bg-card);
+    text-align: center;
+    padding: 4rem 0;
+}
+
+footer .container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 7%; /*adiciona espaçamento interno horizontalusando porcentagem*/
+}
+
+.content-1 {
+    flex: 1 1 25rem; /*define tamanho flexivel com largura minima de 25rem*/
+    margin: 1rem/*adiciona margem ao redor do conteudo*/;
+} 
+
+.content-1 ul {
+    list-style: none;
+    padding: 0;
+}
+
+.content-1 ul li {
+    margin-bottom: 1rem;/*adiciona espaçamento inferior entre os itens da lista*/
+}
+
+.content-1 ul li a{
+    color: #ccc;
+    text-decoration: none;
+    font-size: 1.6rem;
+}
+
+.content-1 ul li a:hover {
+    color: var(--hover);
+    transition: 0.8s;
+}
+
+.social-links {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 1.5rem;
+}
+
+.social-links a i {
+    color: var(--main-color);
+    font-size: 3rem;
+}
+
+.social-links a i:hover {
+    color: var(--hover);
+    transition: 0.8s;
+}
+
+.footer-bottom{
+    text-align: center; /*centraliza o texto */
+    padding: 1rem 0;/*Adiciona espaçamento interno vertical*/
+    font-size: 1.6rem;/*Define o tamanho da fonte*/
+    border-top: var(--border);/*Adiciona uma borda superior*/
+    margin-top: 2rem; /*Adiciona espaço acima do roda pé*/
+    color: #ccc;/*define a cor do texto como cinza*/
 }
