--- a/GBF/diversao.css
+++ b/GBF/diversao.css
@@ -182,19 +182,23 @@ header {
     /* Organiza */
     grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
+
+}
+
+.box:hover{
+    transform: scale(1.03);
+    box-shadow: 0 6px 16px rgb(0, 0, 0);
+    transition: 0.3s;
+    cursor: pointer;
 }
 
 .box-02{
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
-.box-03{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 /* CONFIGURAÇÃO SESSAO RODAPÉ */
 
 .title-footer{
@@ -272,4 +276,18 @@ footer .container {
     border-top: var(--border);/*Adiciona uma borda superior*/
     margin-top: 2rem; /*Adiciona espaço acima do roda pé*/
     color: #ccc;/*define a cor do texto como cinza*/
+}
+
+@media(max-width: 768px) {
+    /* Ajustes gerais */
+    html{
+       font-size: 1rem; 
+    }
+    .diversao .star h1{
+         font-size: 2.3rem;
+    }
+    .{
+        flex-direction: column;
+        align-items: center;
+    }
 }
