--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ h2 {
     #lista-eventos {
       display: flex;
       flex-direction: row;
-      justify-content: space-around;
+      gap: 1rem;
       margin: auto;
       padding: 1rem;
     }
@@ -270,6 +270,7 @@ h2 {
       flex: 1;
     }
     .evento h2 {
+    
       margin: 0 0 0.5rem 0;
       color: #59ad96;
     }
