--- a/Victor/bike.css
+++ b/Victor/bike.css
@@ -331,6 +331,37 @@ footer .container {
     color: #ccc;/*define a cor do texto como cinza*/
 }
 
+@media (max-width: 768px) {
+
+    .menu-toggle {
+        display: block;
+    }
+
+    nav {
+        display: none;
+        width: 100%;
+    }
+
+    nav.active {
+        display: block;
+    }
+
+    .list-menu ul {
+        flex-direction: column;
+        align-items: center;
+        gap: 1.5rem;
+        padding: 2rem 0;
+    }
+
+    .list-menu ul li a {
+        font-size: 2rem;
+    }
+
+    .list-menu ul li a:hover {
+        color: black;
+    }
+
+}
 
 
 
