--- a/GBF/diversao.css
+++ b/GBF/diversao.css
@@ -51,6 +51,107 @@ header {
     z-index: 999;
 }
 
+.item-menu-header { /* Nossas li que estão dentro do LIST MENU, onde se encontram os nomes dos itens apresentados no HEADER */
+    margin-right: 25px; /* margem da direita */
+}
+
+.nav-links li > a:hover { /* Nossas li que estão dentro do LIST MENU. (a) nossa tag de link que é representada por: HOME/PRODUTOS/CONTATO, e o Hover responsável pela modificação de cor ao passar o cursor em cima.*/
+    color: var(--hover); /* Aqui atribuimos uma cor */
+    transition: 1s; /* E o tempo em que será exibido ao passar o cursor */
+}
+
+.item-menu-header > a { /* Nossas li que estão dentro do LIST MENU. (a) nossa tag de link que é representada por: HOME/PRODUTOS/CONTATO */
+    color: white; /* Cor das letras */
+    text-decoration: none; /* Responsável por tirar o sublinhado inferior que estava visível */
+    font-size: 0.8em; /* Tamanho da letra */
+} 
+
+
+.navbar {
+    color: white; /*Cor da letra*/
+    display: flex; /*Flexíveis*/
+    justify-content: space-between; /*A distribuição dos itens sejam com Space-between*/
+    align-items: center; /*Alinhamento da vertical*/
+    padding: 1rem 1.5rem; /*Preenchimento superior/inferior e esquerda/direita*/
+    height: 2.6rem; /*Altura do NavBar*/
+}
+
+.nav-links { /*Aqui estamos estilizando a UL (lista não ordenada)*/
+    list-style: none; /*Retirando o estilo de lista*/ 
+    display: flex; /*Tornando a caixa flexível, e lado a lado*/
+    margin: 0; /*Zerando os espaços de margem que são habilitados por padrão*/
+    padding: 0; /*Zerando os preenchimentos que são habilitados por padrão*/
+    gap: 3rem;
+}
+
+.nav-links li { /*Estilizando nossa LI que está dentro da UL*/
+    padding: 0 8px; /*Preenchimento da LI superior/inferior 0 e laterais em 9px*/
+}
+
+.nav-links a,
+.nav-links-mobile a { /*Estamos chamando as duas âncoras para estilização, tanto da Versão Desktop quanto da versão Mobile.*/
+    color: var(--font1); /*A cor da letra*/
+    text-decoration: none; /*E sem sublinhado*/
+    font-size: 3rem;  
+          
+}
+
+.mobile-menu { /*Estilização da caixa Mobile quando aberta*/
+    display: none; /*Display: Nenhum*/
+    position: fixed; /*Posição fixa na parte direita da página*/
+    top: 0; /*Superior em 0 fazendo a caixa encostar ao topo*/
+    right: 0; /*Direita em 0 fazendo a caixa encostar a direita*/
+    width: 60%; /*Largura em porcentagem da caixa*/
+    height: 40%; /*Altura de 100% da tela*/
+    background-color: var(--bg); /*Cor de fundo*/
+    flex-direction: column; /*direção dos itens dentro da caixa */
+    align-items: center; /*Alinhamento na vertical do itens*/
+    font-size: 1.8rem; /*tamanho da letra dentro da caixa*/
+}
+
+.nav-links-mobile { /*Lista não ordenada da versão mobile*/
+    display: flex; /*Tornando os itens (LISTAS) flexíveis*/
+    flex-direction: column; /*Estamos direcionando o posicionamento dessas listas*/
+    text-align: end; /*Alinhando o texto ao centro*/
+    gap: 1.2rem; /*Espaço entre as listas */
+    /* width: 0%; Zeramos a largura podendo retirar essa linha para testar visualizão */
+    list-style: none; /*Estilo de lista desabilitado*/
+    /* padding: 0; Preenchimento zerado, podendo também ser retirado para testes */
+}
+
+.nav-links-mobile li { /*listas da versão Mobile*/
+    border-bottom: 1px solid #787272; /*Bordar inferior de cada lista*/
+    padding-bottom: 1.2rem; /*Tamanho da borda*/
+}
+
+.nav-links-mobile li a:hover {
+    cursor: pointer;
+    color: var(--hover);
+}
+
+.hamburger,
+.close { /*Estilizando os botões de abertura e fechamento*/
+    font-size: 3rem; /*Tamanho do elemento*/
+    background: none; /*Removido o Background*/
+    border: none; /*BORDA NENHUMAAAAAAA*/
+    color: var(--font1); /*cor do elemento*/
+    cursor: pointer; /*Cursor Habilitado*/
+    display: none; /*Escondendo os botões*/
+    margin-left: 10rem;
+}
+
+.close {
+    margin-top: 20px;/*Espaçamento superior do X */
+    margin-right: 20px; /*Espaçamento a direita do X*/
+    display: block; /*Formatação da Imagem em bloco*/
+    align-self: end; /*Alinhamento do botão*/
+}
+
+
+.flex { /*ELEMENTO USADO NO JS*/
+    display: flex; /*Tornando item flexível e visível.*/
+}
+
 .menu-toggle {
   display: none;
   font-size: 3rem;
@@ -61,23 +162,6 @@ header {
 .logo img{
     height: 10rem;/*define altura do logo*/
 
-}
-
-.list-menu li {
-    display:inline-block;
-    gap: 3rem;
-}
-
-.list-menu li a {
-    color: var(--font1);
-    font-size: 2.6rem;
-    padding: 1.5rem;
-}
-
-.list-menu li:hover {
-    color: var(--hover); /*muda a cor do hover*/
-    border-bottom: 0.1rem solid var(--hover);/*Adiciona uma linha inferior no hover*/
-    padding-bottom: 0.5rem;/*adicionja espaçamento inferior no hover*/
 }
 
 .submenu {
@@ -103,6 +187,7 @@ header {
   color: var(--font1);
   text-align: left;
   font-size: 1.5rem;
+  
 }
 
 /* *************************************************************************** */
@@ -322,50 +407,41 @@ footer .container {
     margin-top: 2rem; /*Adiciona espaço acima do roda pé*/
     color: #ccc;/*define a cor do texto como cinza*/
 }
+
+
+
+
+@media (max-width: 834px){
+    .nav-links{
+        display: none;
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+    .mobile-menu {
+        z-index:999;
+    }
+}
+
+
+@media (max-width: 410px) {
+    #menu-header {
+        display: none;
+    }    
+}
+
+
 @media (max-width: 768px) {
     html {
         font-size: 55%; /* Reduz ligeiramente o tamanho da fonte base */
     }
 
-    header {
-       display: flex;
-        align-items: center;
-    }
-
-    .logo img {
-        height: 8rem;
-    }
-
-    .menu-toggle {
-        display: block;
-    }
-
-     nav {
-        display: none;
-        width: 100%;
-    }
-
-    nav.active {
-        display: block;
-    }
-
-    .list-menu ul {
-        flex-direction: column;
-        align-items: center;
-        gap: 1.5rem;
-        padding: 2rem 0;
-    }
-
-    .list-menu ul li a {
-        font-size: 2rem;
-    }
-
-    .list-menu ul li a:hover {
-        color: black;
-    }
+   
 
     .swiper {
-        height: auto;
+        
         padding: 10rem 1rem;
         overflow: hidden;
     }
